<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUp">

    <!-- Imagen de fondo -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_fondo_al_reves"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/darkOverlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#3D000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="70dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@+id/main"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:gravity="center"
            android:layout_marginTop="70dp"
            android:orientation="vertical">
            <!-- Img Icon -->
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/icon_circulo"/>

            <!-- Email -->
            <TextView
                style="@style/Texto"
                android:layout_gravity="start"
                android:text="@string/email"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/card_border"/>

            <EditText
                android:id="@+id/textEmail"
                style="@style/editedTextStyle"
                android:inputType="textEmailAddress" />

            <!-- Nom Usuari-->
            <TextView
                style="@style/Texto"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:text="@string/nom_usuari"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/card_border"/>

            <EditText
                android:id="@+id/textUserName"
                style="@style/editedTextStyle"
                android:inputType="text" />

            <!-- Password -->
            <TextView
                style="@style/Texto"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:text="@string/contrase_a"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/card_border"/>

            <EditText
                android:id="@+id/textPass"
                style="@style/editedTextStyle"
                android:inputType="textPassword" />

            <!-- Repetir Password -->
            <TextView
                style="@style/Texto"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:text="@string/repetir_contrase_a"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/card_border"/>

            <EditText
                android:id="@+id/textRepPass"
                style="@style/editedTextStyle"
                android:inputType="textPassword" />

            <!-- Boton Login -->
            <Button
                android:id="@+id/btn_login"
                style="@style/BotonIntermedio"
                android:layout_width="150dp"
                android:text="Crear Cuenta" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <!-- Texto -->
            <TextView
                android:id="@+id/textIrALogin"
                style="@style/Texto_Blod"
                android:clickable="true"
                android:text="@string/login"/>

            <TextView
                android:id="@+id/textPrivacidad"
                style="@style/Texto_Blod"
                android:clickable="true"
                android:text="@string/privacidad"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>